force-app/main/default/objects/Job_Posting__c.object
<CustomObject>
    <fields>
        <fullName>Job_Posting_Site__c</fullName>
        <label>Job Posting Site</label>
        <referenceTo>Job_Posting_Site__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <formula>Position__r.Job_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOBPOST-{0000}</displayFormat>
        <label>Job Posting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>